--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,13 @@
             <version>1.18.20</version>
             <scope>compile</scope>
         </dependency>
-
+        <!--分页插件 pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <!-- 特别注意版本问题 -->
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
